fix(expandingcard.css): fixes wrapping in header

--- a/src/components/ExpandingCard/ExpandingCard.css
+++ b/src/components/ExpandingCard/ExpandingCard.css
@@ -33,6 +33,8 @@
 
 .expandingCard__headerTitle {
   align-self: center;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .expandingCard__headerActions {
